--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					</div>	
                 <a href="images/HasikalaHettiarachchiCV.pdf" target="_blank" download class="btn btn2">Download CV</a>
             </div>
-			<div class="contact-right">
+<!-- 			<div class="contact-right">
                     <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
@@ -166,7 +166,7 @@
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
                     <span id="msg"></span>
-            </div>
+            </div> -->
 		</div>
 	</div>
 	
@@ -208,7 +208,7 @@ var sidemenu = document.getElementById("sidemenu");
         }
 </script>
 
-<script>
+<!-- <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbyo1ajETPio_HW1FBtFxiu-tdEawXQ6BxZfOQTbzy_c2AR3lVTxvQmeEOHUWr6sjYvcNA/exec'
   const form = document.forms['submit-to-google-sheet']
   const msg = document.getElementById("msg")
@@ -230,4 +230,4 @@ var sidemenu = document.getElementById("sidemenu");
 
 </body>
 
-</html>
+</html> -->
